--- a/app/istio-testapp/templates/hw-v2-depl.yaml
+++ b/app/istio-testapp/templates/hw-v2-depl.yaml
@@ -24,3 +24,15 @@ spec:
           - "-text=APP: HW-V2 | NS: istio-testapp | CLUSTER: my-cluster" # TODO: Update with ArgoCD Parameter
         ports:
         - containerPort: {{ .Values.hw.service.port }}
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: {{ .Values.hw.service.port }}
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: {{ .Values.hw.service.port }}
+          initialDelaySeconds: 15
+          periodSeconds: 30
