--- a/app/istio-testapp/templates/hw-dr.yaml
+++ b/app/istio-testapp/templates/hw-dr.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hw-destination-rule
   namespace: {{ .Values.global.namespace }}
 spec:
-  host:  {{ .Values.httpbin.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
+  host:  {{ .Values.hw.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
   subsets:
   - name: v1
     labels:
