--- a/app/istio-testapp/templates/hw-vs.yaml
+++ b/app/istio-testapp/templates/hw-vs.yaml
@@ -5,17 +5,17 @@ metadata:
   namespace: {{ .Values.global.namespace }}
 spec:
   hosts:
-  - {{ .Values.httpbin.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
+  - {{ .Values.hw.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
   http:
   - match:
     - uri:
         prefix: /
     route:
     - destination:
-        host: {{ .Values.httpbin.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
+        host: {{ .Values.hw.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
         subset: v1
       weight: 1
     - destination:
-        host: {{ .Values.httpbin.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
+        host: {{ .Values.hw.service.name }}.{{ .Values.global.namespace }}.svc.cluster.local
         subset: v2
       weight: 99
