--- a/app/istio-testapp/templates/hw-v1-depl.yaml
+++ b/app/istio-testapp/templates/hw-v1-depl.yaml
@@ -26,13 +26,13 @@ spec:
         - containerPort: {{ .Values.hw.service.port }}
         readinessProbe:
           httpGet:
-            path: /health
+            path: /
             port: {{ .Values.hw.service.port }}
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
           httpGet:
-            path: /health
+            path: /
             port: {{ .Values.hw.service.port }}
           initialDelaySeconds: 15
           periodSeconds: 30
