--- a/app/istio-testapp/templates/hw-v2-depl.yaml
+++ b/app/istio-testapp/templates/hw-v2-depl.yaml
@@ -26,11 +26,13 @@ spec:
         - containerPort: {{ .Values.hw.service.port }}
         readinessProbe:
           httpGet:
+            path: /app-health/dest-container-v1/readyz
             port: {{ .Values.hw.service.port }}
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
           httpGet:
+            path: /app-health/dest-container-v1/readyz
             port: {{ .Values.hw.service.port }}
           initialDelaySeconds: 15
           periodSeconds: 30
