--- a/istio/helm/istio-monitor/templates/prometheus-depl.yaml
+++ b/istio/helm/istio-monitor/templates/prometheus-depl.yaml
@@ -5,27 +5,72 @@ metadata:
     app.kubernetes.io/component: server
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/instance: prometheus
-    app.kubernetes.io/version: {{ .Values.prometheus.version }}
+    app.kubernetes.io/version: v2.55.1
     helm.sh/chart: prometheus-25.30.1
     app.kubernetes.io/part-of: prometheus
+  annotations:
+    argocd.argoproj.io/hook: PostSync
   name: prometheus
-  namespace: {{ .Values.global.namespace }}
+  namespace: istio-system
 spec:
-  replicas: {{ .Values.prometheus.replicas }}
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: server
+      app.kubernetes.io/name: prometheus
+      app.kubernetes.io/instance: prometheus
+  replicas: 1
+  revisionHistoryLimit: 10
+  strategy:
+    type: Recreate
+    rollingUpdate: null
   template:
     metadata:
       labels:
         app.kubernetes.io/component: server
         app.kubernetes.io/name: prometheus
         app.kubernetes.io/instance: prometheus
+        app.kubernetes.io/version: v2.55.1
+        helm.sh/chart: prometheus-25.30.1
+        app.kubernetes.io/part-of: prometheus
+        
+        sidecar.istio.io/inject: "false"
     spec:
+      enableServiceLinks: true
       serviceAccountName: prometheus
       containers:
-        - name: prometheus-server
-          image: "{{ .Values.prometheus.prometheus_image }}"
+        - name: prometheus-server-configmap-reload
+          image: "ghcr.io/prometheus-operator/prometheus-config-reloader:v0.78.1"
           imagePullPolicy: "IfNotPresent"
           args:
-            - --storage.tsdb.retention.time={{ .Values.prometheus.retention }}
+            - --watched-dir=/etc/config
+            - --listen-address=0.0.0.0:8080
+            - --reload-url=http://127.0.0.1:9090/-/reload
+          ports:
+            - containerPort: 8080
+              name: metrics
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: metrics
+              scheme: HTTP
+            initialDelaySeconds: 2
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: metrics
+              scheme: HTTP
+            periodSeconds: 10
+          volumeMounts:
+            - name: config-volume
+              mountPath: /etc/config
+              readOnly: true
+
+        - name: prometheus-server
+          image: "prom/prometheus:v2.55.1"
+          imagePullPolicy: "IfNotPresent"
+          args:
+            - --storage.tsdb.retention.time=15d
             - --config.file=/etc/config/prometheus.yml
             - --storage.tsdb.path=/data
             - --web.console.libraries=/etc/prometheus/console_libraries
@@ -37,17 +82,34 @@ spec:
             httpGet:
               path: /-/ready
               port: 9090
+              scheme: HTTP
             initialDelaySeconds: 0
             periodSeconds: 5
+            timeoutSeconds: 4
+            failureThreshold: 3
+            successThreshold: 1
           livenessProbe:
             httpGet:
               path: /-/healthy
               port: 9090
+              scheme: HTTP
             initialDelaySeconds: 30
             periodSeconds: 15
+            timeoutSeconds: 10
+            failureThreshold: 3
+            successThreshold: 1
+          volumeMounts:
+            - name: config-volume
+              mountPath: /etc/config
+            - name: storage-volume
+              mountPath: /data
+              subPath: ""
+      dnsPolicy: ClusterFirst
+      terminationGracePeriodSeconds: 300
       volumes:
         - name: config-volume
           configMap:
             name: prometheus
         - name: storage-volume
-          emptyDir: {}
+          emptyDir:
+            {}
