--- a/istio/helm/istio-monitor/templates/prometheus-depl.yaml
+++ b/istio/helm/istio-monitor/templates/prometheus-depl.yaml
@@ -5,13 +5,13 @@ metadata:
     app.kubernetes.io/component: server
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/instance: prometheus
-    app.kubernetes.io/version: v2.55.1
+    app.kubernetes.io/version: {{ .Values.prometheus.version }}
     helm.sh/chart: prometheus-25.30.1
     app.kubernetes.io/part-of: prometheus
   annotations:
     argocd.argoproj.io/hook: PostSync
   name: prometheus
-  namespace: istio-system
+  namespace: {{ .Values.global.namespace }}
 spec:
   selector:
     matchLabels:
@@ -29,7 +29,7 @@ spec:
         app.kubernetes.io/component: server
         app.kubernetes.io/name: prometheus
         app.kubernetes.io/instance: prometheus
-        app.kubernetes.io/version: v2.55.1
+        app.kubernetes.io/version: {{ .Values.prometheus.version }}
         helm.sh/chart: prometheus-25.30.1
         app.kubernetes.io/part-of: prometheus
         
@@ -39,7 +39,7 @@ spec:
       serviceAccountName: prometheus
       containers:
         - name: prometheus-server-configmap-reload
-          image: "ghcr.io/prometheus-operator/prometheus-config-reloader:v0.78.1"
+          image: {{ .Values.prometheus.config_reload_image }}
           imagePullPolicy: "IfNotPresent"
           args:
             - --watched-dir=/etc/config
@@ -67,7 +67,7 @@ spec:
               readOnly: true
 
         - name: prometheus-server
-          image: "prom/prometheus:v2.55.1"
+          image: "prom/prometheus:{{ .Values.prometheus.version }}"
           imagePullPolicy: "IfNotPresent"
           args:
             - --storage.tsdb.retention.time=15d
