--- a/istio/helm/istio-monitor/templates/prometheus-cr.yaml
+++ b/istio/helm/istio-monitor/templates/prometheus-cr.yaml
@@ -10,7 +10,8 @@ metadata:
     app.kubernetes.io/part-of: prometheus
   name: prometheus
 rules:
-  - apiGroups: [""]
+  - apiGroups:
+      - ""
     resources:
       - nodes
       - nodes/proxy
@@ -24,4 +25,25 @@ rules:
       - get
       - list
       - watch
-  # Add other rules as required
+  - apiGroups:
+      - "extensions"
+      - "networking.k8s.io"
+    resources:
+      - ingresses/status
+      - ingresses
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - "discovery.k8s.io"
+    resources:
+      - endpointslices
+    verbs:
+      - get
+      - list
+      - watch
+  - nonResourceURLs:
+      - "/metrics"
+    verbs:
+      - get
