feat: add cronjob

--- a/testkube/helm/templates/tw-istio-testapp-httpbin.yaml
+++ b/testkube/helm/templates/tw-istio-testapp-httpbin.yaml
@@ -9,6 +9,9 @@ metadata:
     test: integrationtests
     version: 0.0.1
 spec:
+  events:
+  - cronjob:
+      cron: 0 3 * * *
   container:
     env:
       - name: NS
