test: update testkube execution script

--- a/testkube/helm/templates/job-tw-execution.yaml
+++ b/testkube/helm/templates/job-tw-execution.yaml
@@ -14,5 +14,7 @@ spec:
         image: kubeshop/testkube-cli:2.1.19
         command:
         - /bin/sh
-          testkube run tw tw-smoketest-istio-system-kiali
+        - -c
+        - |
+          testkube get tw
       restartPolicy: Never
