--- a/testkube/helm/templates/job-tw-execution.yaml
+++ b/testkube/helm/templates/job-tw-execution.yaml
@@ -2,7 +2,7 @@ apiVersion: tests.testkube.io/v1
 kind: TestTrigger
 metadata:
   name: testtrigger-example
-  namespace: default
+  namespace: istio-testapp
 spec:
   resource: deployment
   resourceSelector:
