--- a/.github/workflows/build-image-.yaml
+++ b/.github/workflows/build-image-.yaml
@@ -21,33 +21,36 @@ env:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Push Images to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up QEMU
+      - name: Check Out Repository
         uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Set Up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: push-frontend-image
-        uses: docker/build-push-action@v2
+      - name: Build and Push Frontend Image
+        uses: docker/build-push-action@v3
         with:
           context: ${{ env.FRONTEND_CONTEXT }}
           push: true
           tags: ${{ env.DOCKER_HUB_NAMESPACE }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.event.inputs.frontend_version }}
 
-      - name: push-backend-inventory-image
-        uses: docker/build-push-action@v2
+      - name: Build and Push Backend Image
+        uses: docker/build-push-action@v3
         with:
           context: ${{ env.BACKEND_CONTEXT }}
           push: true
