--- a/app/shop/helm/template/frontend-svc.yaml
+++ b/app/shop/helm/template/frontend-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: {{ .Values.shop.frontend.name }}
   namespace: {{ .Values.global.namespace }}
 spec:
   selector:
@@ -9,5 +9,5 @@ spec:
   ports:
     - port: {{ .Values.shop.frontend.port }}
       targetPort: {{ .Values.shop.frontend.port }}
-      name: http-frontend
-  type: LoadBalancer
+      name: {{ .Values.shop.frontend.http.name }}
+  type: {{ .Values.shop.frontend.serviceTypes }}
