--- a/app/shop/helm/values.yaml
+++ b/app/shop/helm/values.yaml
@@ -5,14 +5,24 @@ global:
   clusterName: my-cluster
 
 shop:
-  frontend:
+  frontend: 
+    name: frontend
     app: frontend
     port: 9990
     image: yuyatinnefeld/cnk-frontend
-    imageTag: 0.1.1
+    imageTag: 0.1.2
+    description: "CKN FRONTEND"
+    serviceTypes: LoadBalancer
+    http:
+      name: http-frontend
 
   backendInventory:
+    name: backend-inventory
     app: inventory
     port: 9991
     image: yuyatinnefeld/cnk-backend-inventory
-    imageTag: 0.1.1
+    imageTag: 0.1.2
+    description: "CKN BACKEND INVENTORY"
+    serviceTypes: LoadBalancer
+    http:
+      name: http-inventory
