refactor: activate istio monitor namespace

--- a/istio/helm/istio-monitor/values.yaml
+++ b/istio/helm/istio-monitor/values.yaml
@@ -1,6 +1,6 @@
 # GLOBAL PARAMETER
 global:
-  namespace: istio-system #TODO: change later -> istio-monitor
+  namespace: istio-monitor #TODO: change later -> istio-monitor
 
 prometheus:
   version: "v2.55.1"
