--- a/metallb/helm/templates/metallb-config-shop.yaml
+++ b/metallb/helm/templates/metallb-config-shop.yaml
@@ -10,7 +10,7 @@ spec:
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: example
+  name: cnk-shop-l2adversement
   namespace: {{ .Values.global.namespace }}
 spec:
   ipAddressPools:
