--- a/app/shop/helm/templates/frontend-svc.yaml
+++ b/app/shop/helm/templates/frontend-svc.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   name: {{ .Values.global.productName }}-{{ .Values.shop.frontend.name }}
   namespace: {{ .Values.global.namespace }}
 spec:
