feat: add istio ingress gateway for cnk shop app

--- a/app/shop/helm/values.yaml
+++ b/app/shop/helm/values.yaml
@@ -28,3 +28,9 @@ shop:
     serviceTypes: LoadBalancer
     http:
       name: http-inventory
+
+istio:
+  gateway:
+    name: cnk-gateway
+    port: 80
+  hostname: "gateway.cnk.com"
