refactor: update backend endpoint name

--- a/app/shop/helm/templates/istio-config/virtual-service.yaml
+++ b/app/shop/helm/templates/istio-config/virtual-service.yaml
@@ -19,7 +19,7 @@ spec:
         host: {{ .Values.global.productName }}-{{ .Values.shop.frontend.name }}
   - match:
     - uri:
-        prefix: /backend
+        prefix: /backend-inventory
     route:
     - destination:
         port:
