feat: update istio authz policy

--- a/app/shop/helm/templates/frontend/frontend-sa.yaml
+++ b/app/shop/helm/templates/frontend/frontend-sa.yaml
@@ -1,5 +1,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
   name: {{ .Values.shop.frontend.name }}-sa
   namespace: {{ .Values.global.namespace }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: frontend-sa-token
+  namespace: {{ .Values.global.namespace }}
+  annotations:
+    kubernetes.io/service-account.name: frontend-sa
+type: kubernetes.io/service-account-token
