--- a/IaC/kind/namespace.yaml
+++ b/IaC/kind/namespace.yaml
@@ -37,6 +37,12 @@ metadata:
   labels:
     istio-injection: enabled
 ---
+# External Services
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: external
+---
 # TESTKUBE
 apiVersion: v1
 kind: Namespace
