feat: update prio to deploy shop components

--- a/app/shop/helm/templates/istio-config/allow-frontend-access-backend.yaml
+++ b/app/shop/helm/templates/istio-config/allow-frontend-access-backend.yaml
@@ -1,6 +1,8 @@
 apiVersion: security.istio.io/v1
 kind: AuthorizationPolicy
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   name: allow-frontend-to-backendauthz
   namespace: {{ .Values.global.namespace }}
 spec:
