--- a/app/shop/helm/templates/istio-config/deny-all-authz.yaml
+++ b/app/shop/helm/templates/istio-config/deny-all-authz.yaml
@@ -1,6 +1,8 @@
 apiVersion: security.istio.io/v1
 kind: AuthorizationPolicy
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   name: deny-all-authz
   namespace: {{ .Values.global.namespace }}
 spec:
