--- a/app/shop/helm/templates/istio-config/ingress-gw.yaml
+++ b/app/shop/helm/templates/istio-config/ingress-gw.yaml
@@ -1,6 +1,8 @@
 apiVersion: networking.istio.io/v1
 kind: Gateway
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   name: {{ .Values.istio.gateway.name }}
   namespace: {{ .Values.global.namespace }}
 spec:
