--- a/app/shop/helm/Chart.yaml
+++ b/app/shop/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: shop-chart
-description: A Helm chart for deploying all shop components (frontend, inventory, item, account)
+description: A Helm chart for deploying all shop components (frontend, inventory, ml, item, account)
 version: 0.1.0
 appVersion: 0.1.0
