--- a/app/shop/helm/templates/frontend/frontend-sa.yaml
+++ b/app/shop/helm/templates/frontend/frontend-sa.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"
+  # annotations:
+  #   argocd.argoproj.io/sync-wave: "1"
   name: {{ .Values.shop.frontend.name }}-sa
   namespace: {{ .Values.global.namespace }}
 ---
