--- a/app/shop/helm/templates/inventory/backend-inventory-depl.yaml
+++ b/app/shop/helm/templates/inventory/backend-inventory-depl.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  # annotations:
-  #   argocd.argoproj.io/sync-wave: "2"
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
   name: {{ .Values.global.productName }}-{{ .Values.shop.backendInventory.name }}
   namespace: {{ .Values.global.namespace }}
   labels:
