--- a/app/shop/helm/templates/ml/backend-ml-svc.yaml
+++ b/app/shop/helm/templates/ml/backend-ml-svc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  # annotations:
-  #   argocd.argoproj.io/sync-wave: "2"
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
   name: {{ .Values.global.productName }}-{{ .Values.shop.backendML.name }}
   namespace: {{ .Values.global.namespace }}
 spec:
