--- a/app/shop/helm/templates/external/external-api-depl.yaml
+++ b/app/shop/helm/templates/external/external-api-depl.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    argocd.argoproj.io/sync-wave: "4"
+  # annotations:
+  #   argocd.argoproj.io/sync-wave: "4"
   name: {{ .Values.global.productName }}-{{ .Values.api.external.name }}
   namespace: {{ .Values.api.external.namespace }}
   labels:
